feat: Implement AI logic and PWA offline support
Adds Minimax algorithm for AI opponent. Enhances PWA capabilities with offline support, including service worker for caching essential assets and navigation fallback, and network status detection in the app. Includes AI blunder chance and improved AI move selection logic.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,7 +9,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="description" content="A cyberpunk Tic-Tac-Toe game against a trash-talking AI.">
-    <link rel="manifest" href="/manifest.json">
     <title>Beat The Bot</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
@@ -133,16 +133,24 @@
         animation: scan-line 2s linear infinite;
       }
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "vite-plugin-pwa": "https://aistudiocdn.com/vite-plugin-pwa@^1.2.0"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "vite-plugin-pwa": "https://aistudiocdn.com/vite-plugin-pwa@^1.2.0",
+    "workbox-strategies": "https://aistudiocdn.com/workbox-strategies@^7.4.0",
+    "workbox-precaching": "https://aistudiocdn.com/workbox-precaching@^7.4.0",
+    "workbox-routing": "https://aistudiocdn.com/workbox-routing@^7.4.0",
+    "workbox-cacheable-response": "https://aistudiocdn.com/workbox-cacheable-response@^7.4.0",
+    "workbox-core": "https://aistudiocdn.com/workbox-core@^7.4.0",
+    "workbox-expiration": "https://aistudiocdn.com/workbox-expiration@^7.4.0",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
   }
 }
 </script>
